--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         }
     ],
     "require": {
+        "php": ">=5.4.0",
         "yiisoft/yii": "*",
         "pythagor/php-a-b": "*"
     },
